tdf#108609 rtl mode set on ruler when it should be ltr

regression from
commit 8ccbc16b5e3f94b8db105232d7085a8553e6bc03
"convert SvxFrameDirection to scoped enum"

Change-Id: I2063ddf4344fb41b54f2ad96a471df4d3205406d